# planzen

./: .claudeignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LOGIC.md  README.md  SPECS.md  STRUCTURE.md  package.json  pyproject.toml
.claude/commands/: ship.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml
data/: input_evf_q2.xlsx  input_evf_q2_discovery.xlsx  input_evf_q2_reboot.xlsx  input_evf_q3_reboot.xlsx  input_with_dependencies_example.xlsx
data/examples/: input_example.xlsx  input_example_realistic_messy.xlsx  input_example_realistic_no_absence.xlsx  output_example.xlsx  output_example_formulas.xlsx
output/: input_evf_q2_202603211625.xlsx  input_evf_q2_202603211625_formulas.xlsx  input_evf_q2_202603211630.xlsx  input_evf_q2_202603211630_formulas.xlsx
src/planzen/: __init__.py  cli.py  config.py  core_logic.py  excel_io.py
tests/: test_core_logic.py  test_excel_io.py  test_integration.py
tests/data/: bad_config_values.xlsx  config_in_epic_description.xlsx  empty_and_unnamed_rows.xlsx  input_per_week_absence.xlsx  input_per_week_absence_dmon.xlsx  input_with_dependencies.xlsx  invalid_estimations.xlsx  missing_config_rows.xlsx  missing_required_columns.xlsx  no_epics.xlsx  valid_input.xlsx
web/backend/: bridge.py  main.py  models.py  persistence.py
web/backend/routes/: compute.py  export.py  sessions.py
web/backend/tests/: conftest.py  test_bridge.py  test_routes.py
web/frontend/: package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  main.tsx
web/frontend/src/api/: client.error.test.ts  client.test.ts  client.ts
web/frontend/src/components/: AllocationPreview.test.tsx  AllocationPreview.tsx  CapacityEditor.test.tsx  CapacityEditor.tsx  EpicsTable.test.tsx  EpicsTable.tsx  ExportBar.test.tsx  ExportBar.tsx  PlanEditor.tsx  UploadView.test.tsx  UploadView.tsx
web/frontend/src/store/: sessionStore.test.ts  sessionStore.ts
web/frontend/src/types/: index.ts
