[project]
name = "planzen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Irina Vidal Migallon", email = "irina.migallon@tomtom.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
planzen = "planzen.cli:main"

[tool.pytest.ini_options]
# Makes both `planzen` (installed package) and web/backend modules resolvable
# without any sys.path manipulation in source files.
pythonpath = ["src", "web/backend"]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
